data/derived/sp14/progs/unify/prog3676.ml.out
Characters 45-72:
  x + if t != [] then sumList (t);;
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type unit but an expression was expected of type
         int
